# Xi-bench-prototype

./: .travis.yml  Cargo.toml  README.md  after-success.sh
benches/: criterion_benchmark.rs  xi-core-lib-wrap.rs
src/: main.rs
